added from live site

--- a/public/index.html
+++ b/public/index.html
@@ -2,22 +2,32 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    
+    <!-- Page Title -->
+  <meta property="og:title" content="Move37 Capital – An AI-driven hedge fund" />
+
+  <!-- Image preview (must be absolute URL or relative if hosted) -->
+  <!-- <meta property="og:image" content="/images/preview.png" /> -->
+
+  <!-- Short description -->
+  <meta property="og:description" content="An AI-driven hedge fund." />
+
+  <!-- Website URL -->
+  <meta property="og:url" content="https://move37capital.com" />
+
+  <!-- Type of content -->
+  <meta property="og:type" content="website" />
+  <link rel="preload" as="image" href="/images/London-Slide.webp" type="image/webp" fetchpriority="high" />
+
+  <link rel="preload" as="image" href="/images/london_bridge2.webp" type="image/webp" fetchpriority="high"/>
     <!-- No motif or favicon -->
-    <link rel="icon" href="/images/favicon-96x96.png" />
+    <link rel="icon" href="/images/favicon-512x512.png" />
     
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Move37 Capital – AI-driven hedge fund"
+      content="Move37 Capital – An AI-driven hedge fund"
     />
-
-    <!-- Optional: remove apple icon if not needed -->
-    <!-- <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" /> -->
-
-    <!-- Manifest still okay if you use PWA features -->
-    <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
 
     <title>Move37 Capital</title>
   </head>
