--- a/public/index.html
+++ b/public/index.html
@@ -20,7 +20,7 @@
 
   <link rel="preload" as="image" href="/images/london_bridge2.webp" type="image/webp" fetchpriority="high"/>
     <!-- No motif or favicon -->
-    <link rel="icon" href="/images/favicon-512x512.png" />
+    <link rel="icon" href="/images/motif4.png" type="image/png"/>
     
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
